<resources>
    <string name="app_name">DeliveryOfirApp</string>
    <string name="title_activity_customer">CustomerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_order">Orders</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="my_orders">My Orders</string>
    <string name="customer_account">Customer Account</string>
    <string name="log_out">Log Out</string>
    <string name="im_picked_up_the_package">I Picked Up The Package</string>
    <string name="i_delivered_the_package">I Delivered The Package</string>
    <string name="all_orders">All Orders</string>
    <string name="back">Back</string>
    <string name="verify_phone">Verify phone</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="enter_code">Enter Code</string>
    <string name="verify">Verify</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="courier_account">Courier Account</string>
    <string name="log_in">Log In</string>
    <string name="connect">Connect</string>
    <string name="up_to_5kg">Up To 5kg</string>
    <string name="up_to_10kg">Up To 10kg</string>
    <string name="order_delivery">Order Delivery</string>
    <string name="phone_number">Enter Phone</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_origin">Enter Origin Address</string>
    <string name="enter_destination">Enter Destination Address</string>
    <string name="confirm">Confirm</string>
    <string name="welcome_customer">Welcome Customer</string>
    <string name="welcome_courier">Welcome Courier</string>
    <string name="delivery_is_finish">Delivery Is Finish\nThank You</string>


</resources>