<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/courier_nav_all_order"
            android:actionLayout="@layout/custom_layout"
            android:icon="@drawable/time"
            android:title="@string/all_orders" />

        <item
            android:id="@+id/courier_nav_Switch_Account"
            android:actionLayout="@layout/custom_layout"
            android:icon="@drawable/swap"
            android:title="@string/customer_account" />

        <item
            android:id="@+id/courier_nav_Log_Out"
            android:actionLayout="@layout/custom_layout"
            android:icon="@drawable/logout"
            android:title="@string/log_out" />
    </group>
</menu>