<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <HorizontalScrollView

        android:id="@+id/home_LAY_above_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/home_LAY_car_and_10kg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/home_LAY_motorcycle_and_5kg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingHorizontal="15dp">

                <TextView

                    android:id="@+id/home_LBL_up_to_5kg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/up_to_5kg"
                    android:textColor="@color/orange" />

                <ImageView
                    android:id="@+id/home_IMG_icon_motorcycle"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:src="@drawable/motorcycle"
                    app:tint="@color/orange" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingHorizontal="20dp">

                <TextView
                    android:id="@+id/home_LBL_up_to_10kg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/up_to_10kg"
                    android:textColor="@color/gray" />

                <ImageView
                    android:id="@+id/home_IMG_icon_car"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:src="@drawable/car" />
            </LinearLayout>

        </LinearLayout>

    </HorizontalScrollView>

    <fragment
        android:id="@+id/home_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/home_LAY_above_fragment">

    </fragment>

    <ImageView
        android:id="@+id/home_IMG_marker"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_centerInParent="true"
        android:src="@drawable/marker" />

    <LinearLayout
        android:id="@+id/home_LAY_on_fragment_below"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:alpha="0.8"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/home_LBL_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/home_BTN_order_delivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/orange"
            android:paddingHorizontal="30dp"
            android:text="@string/order_delivery"
            android:textAllCaps="false"
            android:textColor="@color/white">

        </com.google.android.material.button.MaterialButton>


    </LinearLayout>

</RelativeLayout>